# rufs-nfe-rust

./: .env  .side.yml  Cargo.toml  Dockerfile  README.md  al2023.sh  build.Dockerfile  build.sh  cloud.sh  compose.yml  deploy.sh  letsencrypt.sh  openapi-rufs_nfe-rust.json  runtime.Dockerfile  selenium-side-runner.Dockerfile  tests.side  tests.side.json
nginx/etc/: nginx.conf
nginx/etc/templates/: nginx.server.conf.template
sql/: 001.000.001-database_schema.sql  001.000.002-database_first_data.sql  001.000.003-camex_ncm.sql  001.000.004-confaz_cest.sql  001.000.015-confaz_cfop.sql  001.000.017.sql  001.000.018.sql  001.000.019.sql  001.000.020.sql  001.000.021.sql  001.000.022.sql
src/: lib.rs  main.rs
tests/: pre-commit  tests.sh
webapp/: index.html  manifest.json
webapp/css/: style.css
webapp/es6/: app.js  nfe_import.js  request.js  scanner.js
webapp/lib/: date_fns-1.28.5.js
