[package]
name = "rufs-nfe-rust"
version = "1.0.3"
authors = ["Alexsandro Stefenon <alexsandrostefenon@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
#path = "src/main.rs"

[patch.crates-io]
# js-sys = { git = "https://github.com/71/wasm-bindgen", package = "js-sys" }
# wasm-bindgen = { git = "https://github.com/71/wasm-bindgen" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rufs-base-rust = { path = "../rufs-base-rust", default-features = true }
rufs-crud-rust = { path = "../rufs-crud-rust" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.4.5"
web-log = "1.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rufs-base-rust = { path = "../rufs-base-rust", default-features = true, features = ["http_server","tide","postgres","db_file_json"] }
rufs-crud-rust = { path = "../rufs-crud-rust", default-features = true, features = ["test-selelium"] }
tokio = { version = "1.24", features = ["full"] }
tokio-postgres = {version = "0.7.7", features=[ "with-serde_json-1", "with-chrono-0_4" ]}
tide = { version = "0.16" }
clap = { version = "4.2.7", features = ["derive"] }

[dependencies]
thiserror = "1.0.38"
anyhow = "1.0.69"
reqwest = { version = "0.11.17", features = ["json"] }
workflow-websocket = "0.3.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
async-recursion = "1.0.4"
chrono = { version = "0.4.23", features = ["wasmbind", "serde"] }
indexmap = "1.9.2"
openapiv3 = "1.0"
convert_case = "0.6"
queryst = "2.1"
serde_qs = "0.12.0"
regex = "1"
nested_qs = "0.1.2"
md5 = "0.7.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]

[dependencies.getrandom]
version = "0.2.8"
features = [ 'js' ]

[dev-dependencies]
async-std = { version = "1.5.3", features = ["attributes"] }

[package.metadata.wasm-pack.profile.dev]
# wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# debug-js-glue = true
# demangle-name-section = true
dwarf-debug-info = true
