[package]
name = "rufs-nfe-rust"
version = "1.0.13"
authors = ["Alexsandro Stefenon <alexsandrostefenon@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
#path = "src/main.rs"

[patch.crates-io]
# js-sys = { git = "https://github.com/71/wasm-bindgen", package = "js-sys" }
# wasm-bindgen = { git = "https://github.com/71/wasm-bindgen" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rufs-base-rust = { git = "https://github.com/alexsandrostefenon/rufs-base-rust.git", default-features = true, features = ["client"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.4.5"
web-log = "1.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rufs-base-rust = { git = "https://github.com/alexsandrostefenon/rufs-base-rust.git", default-features = true, features = ["client","http_server","postgres","test-selelium","warp"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.7", features=[ "with-serde_json-1", "with-chrono-0_4" ]}
tide = { version = "0.16", optional = true }
warp = { version = "0.3", optional = true }
clap = { version = "4.2.7", features = ["derive"] }

[dependencies]
lazy_static = "1.4.0"
chrono = { version = "0.4.26", features = ["alloc", "wasmbind", "serde"] }
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
workflow-websocket = "0.3.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
serde-xml-rs = "0.4"
#openssl = "0.10"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"], optional = true }
async-recursion = "1.0.4"
regex = "1"
indexmap = "1.9.2"
openapiv3 = "1.0"
convert_case = "0.6"
md5 = "0.7.0"
rsfbclient = {version="0.24.0", features = ["pure_rust"], optional = true}

[features]
default = ["warp", "postgres"]
#default = ["warp", "postgres", "clipp"]
tide = ["dep:tide"]
warp = ["dep:warp"]
postgres = []
clipp = ["dep:rsfbclient"]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]

[dependencies.getrandom]
version = "0.2.8"
features = [ 'js' ]

[dev-dependencies]
#async-std = { version = "1.5.3", features = ["attributes"] }
futures-lite = "2.3.0"

[package.metadata.wasm-pack.profile.dev]
# wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# debug-js-glue = true
# demangle-name-section = true
dwarf-debug-info = true
